cambios en el index.tpl

--- a/css/style.css
+++ b/css/style.css
@@ -56,4 +56,9 @@ body {
  }
 
 /*--- 3. Conteiners-cuerpo  ---*/
-
+/*    3.A. Index            */
+.portada img {
+    width: 159px;
+    height: 289px;
+    display: inline-block;
+}
