--- a/css/style.css
+++ b/css/style.css
@@ -55,21 +55,28 @@ body {
     color: #927986;;
  }
 
+ .authorsDropdown:hover .dropdown-menu {
+     display: block;
+ }
+
 /*--- 3. Conteiners-cuerpo  ---*/
 /*    3.A. Index            */
-.authorsDropdown:hover .dropdown-menu {
-    display: block;
-}
+
 .cuerpo-index {
     text-align: center;
     margin-top: 20px;
 }
-.portada{
+.portada, .authors{
     display: inline-block;
     margin:3% 0;
 }
 .portada img {
     width: 159px;
     height: 289px;
+    display: inline-block;
+}
+.authors img{
+    width: 190px;
+    height: 280px;
     display: inline-block;
 }
