--- a/css/style.css
+++ b/css/style.css
@@ -80,3 +80,15 @@ body {
     height: 280px;
     display: inline-block;
 }
+
+.authorBox{
+    display: inline-block;
+}
+.authorBox .author{
+    width: 190px;
+    height: 280px;
+    float: left;
+}
+.authorBox .authorName{
+    display: inline;
+}
