arreglar template de commentary boton editar / commentaryApiController revisar

--- a/js/templates/commentary.handlebars
+++ b/js/templates/commentary.handlebars
@@ -5,9 +5,9 @@
       <h4 class="media-heading title">{{nombre}}</h4>
       <h5 class="media-subheading points">Puntaje: {{puntaje}}</h5>
       <p>{{comentario}}</p>
+        <!-- <a class="js-edit" data-idcomment="{{id_commentary}}"><i class="fa fa-trash fa-2x fa-fw" aria-hidden="true"></i></a> revisar para que aparesca el editar -->
       {{#isSuperUser}}
         <a class="js-delete" data-idcomment="{{id_commentary}}"><i class="fa fa-trash fa-2x fa-fw" aria-hidden="true"></i></a>
-        <a class="js-edit" data-idcomment="{{id_commentary}}"><i class="fa fa-trash fa-2x fa-fw" aria-hidden="true"></i></a>
       {{/isSuperUser}}
     </div>
   </div>
