Se arreglo un error en las url del index

--- a/css/style.css
+++ b/css/style.css
@@ -110,10 +110,12 @@ body {
 .itemBox .itemName{
     display: inline;
 }
+/*---    3.E. ABM           ---*/
 
 .cuerpo-form{
     margin: auto;
 }
+
 
 #mensajeForm{
     top: 15px;
