--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,10 @@ body {
      display: block;
  }
  .progress {
+    text-align: center;
+    margin-top: 10%;
+    margin-left: 25%;
+    width: 50%;
     background-color: transparent;
 }
 
