--- a/js/templates/commentary.handlebars
+++ b/js/templates/commentary.handlebars
@@ -1,4 +1,4 @@
-{{#each comments}}
+{{#each comment}}
   <div class="col-md-12 media" id="{{id_comment}}">
     <div class="media-body">
       <h4 class="media-heading title">{{name}}</h4>
